      at level 1, instead of 20% at level 1 up to 100% at level 5.
   -- Fixed bug where @endturn failed to work.
   -- Fixed another bug in skill based maintenance.
   -- Calls to CleanUpWater() and SeverLandBridges() now part of the default
      surface level creation. Also added some variability in terrain growth
      and some code to prevent land from squeezing onto the north and south
      map edges.
   -- Added an option to limit tact-5 leaders based on the number of points
      spent on war.
   -- Added coracles.
   -- CleanUpWater() now uses recursive calls to CheckSea() and is configurable
      via SEA_LIMIT. Added SEVER_LAND_BRIDGES gamedef to control severing
      behaviour.
   -- Added TERRAIN_GRANULARITY gamedef that controls variability in terrain
      distribution.
   -- Added another variant: Fracas!
   -- Added in an option to put varying bullet points in front of units 
      (was one of the TODO items)
   -- Added in flags to individually turn off the ability to study, teach 
      or gain experience in a skill (another one of the TODO items, requested 
      for Ceran)
   -- Option to create surface level with a fractal algorithm. A new GeoMap
      class was implemented to handle the generation of fractal geographical
      maps for world creation. Gamedefs FRACTAL_MAP, FRACTAL_SCATTER and
      FRACTAL_SMOOTH govern this method of map generation
   -- Fix bug in ARegion destructor  
   -- Added code to generate Icosahedral (ie, approximately spherical)
      levels.  Cleaned up some direction handling and some assumptions
      about there always being a region where you expected one to be.
   -- Fixed bug in CheckSea() where left of D_NORTH gave you D_NORTHEAST.
   -- created map.cpp in the gameset directory and moved world creation code
      from aregion.cpp to map.cpp to allow for game specific setup routines
   -- removed FRACTAL_... gamedefs - these things are now handled by game
      specific code in map.cpp